use_negative_frames user preference is not respected in the graph editor #44717

Closed
opened 2015-05-15 09:46:40 +02:00 by Daniel Salazar · 15 comments
Member

System Information
Linux 64

Blender Version
Broken: ba9dbaa

Short description of error
use_negative_frames user preference is not respected in the graph editor

Exact steps for others to reproduce the error
Go to user preferences > Editing
Disable "Allow Negative Frames"

This will make the timeline never go below zero in any editor but the graph editor. Produces jumps when going back to other editors that do respect the option.

**System Information** Linux 64 **Blender Version** Broken: ba9dbaa **Short description of error** use_negative_frames user preference is not respected in the graph editor **Exact steps for others to reproduce the error** Go to user preferences > Editing Disable "Allow Negative Frames" This will make the timeline never go below zero in any editor but the graph editor. Produces jumps when going back to other editors that do respect the option.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo

Added subscriber: @barfot

Added subscriber: @barfot

What is the correct way for me as a noob to contribute with patches for a bugs? Any way, here is a patch that solves the issue
graphNegativeFrames.patch

What is the correct way for me as a noob to contribute with patches for a bugs? Any way, here is a patch that solves the issue [graphNegativeFrames.patch](https://archive.blender.org/developer/F175093/graphNegativeFrames.patch)
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

@barfot please make a diff here https://developer.blender.org/differential/query/all/ leaving the reviewers empty and post the link to it here

@barfot please make a diff here https://developer.blender.org/differential/query/all/ leaving the reviewers empty and post the link to it here
Thanks @Blendify My patch: https://developer.blender.org/D1303

Added subscribers: @JoshuaLeung, @Sergey, @ideasman42, @mont29

Added subscribers: @JoshuaLeung, @Sergey, @ideasman42, @mont29

I do not remember whether this is wanted behavior or not, Joshua?

I do not remember whether this is wanted behavior or not, Joshua?
Member

Although I can see how the graph editor not obeying this setting could be problematic, several potential issues do need to be pointed out:

  • In the Graph Editor, the current frame is used for certain transform operations (e.g. scale, rotate) when set to use the "2d cursor" as the pivot point for those transforms. Not being able to set the current frame before 0 in those cases would be problematic for those cases. Granted, this is probably not used that much, so it may enough to warrant keeping the current behaviour.

  • Another use case that may be more problematic is for Driver FCurves. In that case, the user may want to set or snap the cursor to specific values so that the Driver FCurve can be modified or inspected with precision.

The cases pointed out here may turn out to be quite rare, in which case, requiring the user to enable the "use negative frames" option to do this is probably not a bad thing. On the other hand, the fact that this behaviour does cause some visible confusion when the behaviour don't match up between the different editors is perhaps a bigger issue, since we know that this is bound to happen.

Although I can see how the graph editor not obeying this setting could be problematic, several potential issues do need to be pointed out: - In the Graph Editor, the current frame is used for certain transform operations (e.g. scale, rotate) when set to use the "2d cursor" as the pivot point for those transforms. Not being able to set the current frame before 0 in those cases would be problematic for those cases. Granted, this is probably not used that much, so it may enough to warrant keeping the current behaviour. - Another use case that may be more problematic is for Driver FCurves. In that case, the user may want to set or snap the cursor to specific values so that the Driver FCurve can be modified or inspected with precision. The cases pointed out here may turn out to be quite rare, in which case, requiring the user to enable the "use negative frames" option to do this is probably not a bad thing. On the other hand, the fact that this behaviour does cause some visible confusion when the behaviour don't match up between the different editors is perhaps a bigger issue, since we know that this is bound to happen.

Added subscriber: @brecht

Added subscriber: @brecht

I think similar arguments could be made for other editors where it is also convenient to go to negative frames to inspect or modify something. That's kind of why the setting exists in the first place. I would go for consistency and make the graph editor obey this setting.

I think similar arguments could be made for other editors where it is also convenient to go to negative frames to inspect or modify something. That's kind of why the setting exists in the first place. I would go for consistency and make the graph editor obey this setting.

This issue was referenced by 77ef3f9041

This issue was referenced by 77ef3f9041edea39b1d036e048a8ac35e388520d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Thank you all

Thank you all
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44717
No description provided.