Fix T44717: use_negative_frames ignored /w graph-editor

D1303 by @barfot